All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/IB_Messages__c.field-meta.xml
<CustomField>
    <fullName>IB_Messages__c</fullName>
    <description>Labels and messages used in ServiceMax Installed Product module. Use translation workbench to customize these for your organization.</description>
    <inlineHelpText>Labels and messages used in ServiceMax Installed Product module. Use translation workbench to customize these for your organization.</inlineHelpText>
    <label>IB Messages</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MSG001</fullName>
            </value>
            <value>
                <fullName>MSG002</fullName>
            </value>
            <value>
                <fullName>MSG003</fullName>
            </value>
            <value>
                <fullName>MSG004</fullName>
            </value>
            <value>
                <fullName>MSG005</fullName>
            </value>
            <value>
                <fullName>MSG006</fullName>
            </value>
            <value>
                <fullName>MSG007</fullName>
            </value>
            <value>
                <fullName>MSG008</fullName>
            </value>
            <value>
                <fullName>MSG009</fullName>
            </value>
            <value>
                <fullName>MSG010</fullName>
            </value>
            <value>
                <fullName>MSG011</fullName>
            </value>
            <value>
                <fullName>MSG012</fullName>
            </value>
            <value>
                <fullName>MSG013</fullName>
            </value>
            <value>
                <fullName>MSG014</fullName>
            </value>
            <value>
                <fullName>MSG015</fullName>
            </value>
            <value>
                <fullName>MSG016</fullName>
            </value>
            <value>
                <fullName>MSG017</fullName>
            </value>
            <value>
                <fullName>MSG018</fullName>
            </value>
            <value>
                <fullName>MSG019</fullName>
            </value>
            <value>
                <fullName>MSG020</fullName>
            </value>
            <value>
                <fullName>MSG021</fullName>
            </value>
            <value>
                <fullName>MSG022</fullName>
            </value>
            <value>
                <fullName>MSG023</fullName>
            </value>
            <value>
                <fullName>LAB001</fullName>
            </value>
            <value>
                <fullName>LAB002</fullName>
            </value>
            <value>
                <fullName>LAB003</fullName>
            </value>
            <value>
                <fullName>LAB004</fullName>
            </value>
            <value>
                <fullName>LAB005</fullName>
            </value>
            <value>
                <fullName>LAB006</fullName>
            </value>
            <value>
                <fullName>LAB007</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>