All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/Inventory_Module_Status__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Module_Status__c</fullName>
    <description>Indicates if inventory module has been enabled for this organization or not</description>
    <formula>IF(Enable_Inventory_Module__c = True, &quot;Enabled&quot;, &quot;Disabled&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if inventory module has been enabled for this organization or not. This can be set only by Maxplore administrator at the time of deployment.</inlineHelpText>
    <label>Inventory Module Status</label>
    <type>Text</type>
</CustomField>