All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/Messages__c.field-meta.xml
<CustomField>
    <fullName>Messages__c</fullName>
    <description>DO NOT USE. OBSOLETED. Replaced by module-specific message/label picklist</description>
    <inlineHelpText>Information, warning and error messages used in ServiceMax Classic</inlineHelpText>
    <label>Messages</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ENT001</fullName>
            </value>
            <value>
                <fullName>ENT002</fullName>
            </value>
            <value>
                <fullName>ENT003</fullName>
            </value>
            <value>
                <fullName>ENT004</fullName>
            </value>
            <value>
                <fullName>ENT005</fullName>
            </value>
            <value>
                <fullName>ENT006</fullName>
            </value>
            <value>
                <fullName>ENT007</fullName>
            </value>
            <value>
                <fullName>ENT008</fullName>
            </value>
            <value>
                <fullName>ENT009</fullName>
            </value>
            <value>
                <fullName>ENT010</fullName>
            </value>
            <value>
                <fullName>ENT011</fullName>
            </value>
            <value>
                <fullName>ENT012</fullName>
            </value>
            <value>
                <fullName>ENT013</fullName>
            </value>
            <value>
                <fullName>ENT014</fullName>
            </value>
            <value>
                <fullName>ENT015</fullName>
            </value>
            <value>
                <fullName>ENT016</fullName>
            </value>
            <value>
                <fullName>GEN001</fullName>
            </value>
            <value>
                <fullName>GEN002</fullName>
            </value>
            <value>
                <fullName>IB001</fullName>
            </value>
            <value>
                <fullName>IB002</fullName>
            </value>
            <value>
                <fullName>IB003</fullName>
            </value>
            <value>
                <fullName>IB004</fullName>
            </value>
            <value>
                <fullName>IB005</fullName>
            </value>
            <value>
                <fullName>IB006</fullName>
            </value>
            <value>
                <fullName>IB007</fullName>
            </value>
            <value>
                <fullName>IB008</fullName>
            </value>
            <value>
                <fullName>IB009</fullName>
            </value>
            <value>
                <fullName>IB010</fullName>
            </value>
            <value>
                <fullName>IB011</fullName>
            </value>
            <value>
                <fullName>IB012</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>