All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ServiceMax module in which this setting is used. Lookup to ServiceMax Process: Record Type &apos;Module&apos;</description>
    <inlineHelpText>ServiceMax module in which this setting is used. Lookup to ServiceMax Process: Record Type &apos;Module&apos;</inlineHelpText>
    <label>Module</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>ServiceMax Settings</relationshipLabel>
    <relationshipName>ServiceMax_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>