All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/Notify_on_Negative_Stock__c.field-meta.xml
<CustomField>
    <fullName>Notify_on_Negative_Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to an existing salesforce user. User to be notified when Available or In Transit stock reaches negative number in any transaction</description>
    <inlineHelpText>Link to an existing salesforce user. User to be notified when Available or In Transit stock reaches negative number in any transaction</inlineHelpText>
    <label>Notify on Negative Stock</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServiceMax_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>