All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/Offline_Messages_del__c.field-meta.xml
<CustomField>
    <fullName>Offline_Messages_del__c</fullName>
    <description>Labels and messages to be used in ServiceMax Offline( DO NOT USE)</description>
    <inlineHelpText>Labels and messages to be used in ServiceMax Offline</inlineHelpText>
    <label>Offline Messages( DO NOT USE)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MSG001</fullName>
            </value>
            <value>
                <fullName>MSG002</fullName>
            </value>
            <value>
                <fullName>MSG003</fullName>
            </value>
            <value>
                <fullName>MSG004</fullName>
            </value>
            <value>
                <fullName>MSG005</fullName>
            </value>
            <value>
                <fullName>MSG006</fullName>
            </value>
            <value>
                <fullName>LAB001</fullName>
            </value>
            <value>
                <fullName>LAB002</fullName>
            </value>
            <value>
                <fullName>LAB003</fullName>
            </value>
            <value>
                <fullName>LAB004</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>