All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/Offline_Objects_del__c.field-meta.xml
<CustomField>
    <fullName>Offline_Objects_del__c</fullName>
    <description>Objects to be enabled for ServiceMax offline( DO NOT USE)</description>
    <inlineHelpText>Objects to be enabled for ServiceMax offline</inlineHelpText>
    <label>Offline Objects( DO NOT USE)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Product2</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>SVMXC__Installed_Product__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Site__c</fullName>
            </value>
            <value>
                <fullName>SVMXI__Product_Stock__c</fullName>
            </value>
            <value>
                <fullName>SVMXP__Service_Order__c</fullName>
            </value>
            <value>
                <fullName>SVMXP__Service_Order_Line__c</fullName>
            </value>
            <value>
                <fullName>SVMXP__RMA_Shipment_Order__c</fullName>
            </value>
            <value>
                <fullName>SVMXP__RMA_Shipment_Line__c</fullName>
            </value>
            <value>
                <fullName>SVMXI__Parts_Request__c</fullName>
            </value>
            <value>
                <fullName>SVMXI__Parts_Request_Line__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__ServiceMax_Settings__c</fullName>
            </value>
            <value>
                <fullName>Repair_BOM__c</fullName>
            </value>
            <value>
                <fullName>Repair_BOM_Part__c</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Attachment</fullName>
            </value>
            <value>
                <fullName>MailMergeTemplate</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>SVMXC__Service_Contract__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>