All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/Parts_Request_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Parts_Request_Price_Book__c</fullName>
    <description>Not used</description>
    <inlineHelpText>Parts Request Price Book.</inlineHelpText>
    <label>Parts Request Price Book</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>