All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/Post_SVO_Usage_To_Inventory_Messages__c.field-meta.xml
<CustomField>
    <fullName>Post_SVO_Usage_To_Inventory_Messages__c</fullName>
    <description>Labels and messages used in the Post SVO Usage To Inventory module.</description>
    <inlineHelpText>Labels and messages used in the Post SVO Usage To Inventory module.</inlineHelpText>
    <label>Post SVO Usage To Inventory Messages</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>LAB000</fullName>
            </value>
            <value>
                <fullName>LAB001</fullName>
            </value>
            <value>
                <fullName>LAB002</fullName>
            </value>
            <value>
                <fullName>MSG001</fullName>
            </value>
            <value>
                <fullName>MSG002</fullName>
            </value>
            <value>
                <fullName>MSG003</fullName>
            </value>
            <value>
                <fullName>MSG004</fullName>
            </value>
            <value>
                <fullName>MSG005</fullName>
            </value>
            <value>
                <fullName>MSG006</fullName>
            </value>
            <value>
                <fullName>MSG007</fullName>
            </value>
            <value>
                <fullName>MSG008</fullName>
            </value>
            <value>
                <fullName>MSG999</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>