All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/Quick_Dispatch_Messages__c.field-meta.xml
<CustomField>
    <fullName>Quick_Dispatch_Messages__c</fullName>
    <description>Labels and messages used in Find Partner/Find Technician module in Work Order.</description>
    <inlineHelpText>Labels and messages used in Find Partner/Find Technician module in Work Order.</inlineHelpText>
    <label>Quick Dispatch Messages</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LAB001</fullName>
            </value>
            <value>
                <fullName>LAB002</fullName>
            </value>
            <value>
                <fullName>LAB003</fullName>
            </value>
            <value>
                <fullName>LAB004</fullName>
            </value>
            <value>
                <fullName>LAB005</fullName>
            </value>
            <value>
                <fullName>LAB006</fullName>
            </value>
            <value>
                <fullName>LAB007</fullName>
            </value>
            <value>
                <fullName>LAB008</fullName>
            </value>
            <value>
                <fullName>LAB009</fullName>
            </value>
            <value>
                <fullName>MSG001</fullName>
            </value>
            <value>
                <fullName>MSG002</fullName>
            </value>
            <value>
                <fullName>MSG003</fullName>
            </value>
            <value>
                <fullName>MSG004</fullName>
            </value>
            <value>
                <fullName>MSG005</fullName>
            </value>
            <value>
                <fullName>MSG006</fullName>
            </value>
            <value>
                <fullName>MSG007</fullName>
            </value>
            <value>
                <fullName>MSG008</fullName>
            </value>
            <value>
                <fullName>MSG009</fullName>
            </value>
            <value>
                <fullName>MSG010</fullName>
            </value>
            <value>
                <fullName>MSG011</fullName>
            </value>
            <value>
                <fullName>MSG012</fullName>
            </value>
            <value>
                <fullName>MSG013</fullName>
            </value>
            <value>
                <fullName>OPT001</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>