All_Component_DX/force-app/main/default/objects/ServiceMax_Settings__c/fields/RMA_From_Case_Messages__c.field-meta.xml
<CustomField>
    <fullName>RMA_From_Case_Messages__c</fullName>
    <description>Field labels and messages dispalyed for Create RMA from Case module.</description>
    <inlineHelpText>Field labels and messages dispalyed for Create RMA from Case module.</inlineHelpText>
    <label>RMA From Case Messages</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>LAB000</fullName>
            </value>
            <value>
                <fullName>MSG001</fullName>
            </value>
            <value>
                <fullName>MSG002</fullName>
            </value>
            <value>
                <fullName>MSG003</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>